--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Diario Oficial Automation
 
 on:
   schedule:
-    # Agendado para rodar de segunda a sexta às 20:03 UTC
-    - cron: '3 20 * * 1-5'
+    # Agendado para rodar às 00:03 UTC (correspondente às 20:03 UTC-4, de domingo a quinta-feira)
+    - cron: '3 0 * * 0-4'
 
 jobs:
   run-script:
