--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Diario Oficial Automation
 
 on:
   schedule:
-    # Agendado para rodar às 00:03 UTC (correspondente às 20:03 UTC-4, de domingo a quinta-feira)
+    # Agendado para rodar às 00:03 UTC (20:03 no UTC-4)
     - cron: '3 0 * * 0-4'
 
 jobs:
@@ -18,9 +18,15 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install Chrome and ChromeDriver
         run: |
-          pip install pdfplumber yagmail requests
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+          sudo apt-get install -y chromedriver
+
+      - name: Install Python dependencies
+        run: |
+          pip install pdfplumber yagmail requests selenium
 
       - name: Run Python script
         env:
