--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Diario Oficial Automation
 
 on:
-  workflow_dispatch:  # Permite execução manual
+  workflow_dispatch:  # Permitir execução manual
   schedule:
-    # Agendado para rodar às 00:03 UTC (correspondente a 20:03 UTC-4)
+    # Agendado para rodar às 00:03 UTC (20:03 no UTC-4)
     - cron: '3 0 * * 0-4'
 
 jobs:
@@ -24,23 +24,21 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y wget unzip
 
-          # Baixar e instalar o Google Chrome
+          # Instalar Google Chrome
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
 
-          # Obter a última versão estável do ChromeDriver
-          LATEST_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
-
-          # Baixar o ChromeDriver correspondente
+          # Baixar a última versão compatível do ChromeDriver
+          LATEST_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_130)
           wget https://chromedriver.storage.googleapis.com/${LATEST_VERSION}/chromedriver_linux64.zip
 
           # Extrair e mover o ChromeDriver para /usr/local/bin
           sudo unzip chromedriver_linux64.zip -d /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
 
-          # Verificar a instalação do ChromeDriver
+          # Verificar as versões instaladas
+          google-chrome --version
           chromedriver --version
-
 
       - name: Install Python dependencies
         run: |
