--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,20 +24,22 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y wget unzip
 
-          # Instalar Google Chrome
+          # Baixar e instalar o Google Chrome
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
 
-          # Baixar a última versão compatível do ChromeDriver
-          LATEST_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_130)
-          wget https://chromedriver.storage.googleapis.com/${LATEST_VERSION}/chromedriver_linux64.zip
+          # Adicionar lógica de retry para o ChromeDriver
+          for i in {1..5}; do
+            LATEST_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_130) && \
+            wget https://chromedriver.storage.googleapis.com/${LATEST_VERSION}/chromedriver_linux64.zip && break || \
+            echo "Retrying in 5s..." && sleep 5;
+          done
 
           # Extrair e mover o ChromeDriver para /usr/local/bin
           sudo unzip chromedriver_linux64.zip -d /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
 
-          # Verificar as versões instaladas
-          google-chrome --version
+          # Verificar a instalação do ChromeDriver
           chromedriver --version
 
       - name: Install Python dependencies
