--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,20 +22,24 @@ jobs:
       - name: Install Chrome and ChromeDriver
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip
+          sudo apt-get install -y wget unzip curl
 
-          # Baixar e instalar o Google Chrome
+          # Instalar o Google Chrome
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo dpkg -i google-chrome-stable_current_amd64.deb || sudo apt-get -f install -y
 
-          # Adicionar lógica de retry para o ChromeDriver
-          for i in {1..5}; do
-            LATEST_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_130) && \
-            wget https://chromedriver.storage.googleapis.com/${LATEST_VERSION}/chromedriver_linux64.zip && break || \
-            echo "Retrying in 5s..." && sleep 5;
-          done
+          # Obter a versão do Google Chrome instalado
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+' | head -n1)
 
-          # Extrair e mover o ChromeDriver para /usr/local/bin
+          # Obter a versão correspondente do ChromeDriver
+          CHROMEDRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION%.*})
+
+          echo "Baixando ChromeDriver versão: $CHROMEDRIVER_VERSION"
+
+          # Baixar o ChromeDriver correspondente
+          wget https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip
+
+          # Extrair e instalar o ChromeDriver
           sudo unzip chromedriver_linux64.zip -d /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
 
