--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
           # Baixar e instalar o Google Chrome
           wget https://storage.googleapis.com/chrome-for-testing-public/130.0.6723.58/linux64/chrome-linux64.zip
           unzip chrome-linux64.zip -d chrome
-          sudo mv chrome /usr/local/bin/google-chrome
+          sudo mv chrome/chrome-linux64/chrome /usr/local/bin/google-chrome
+          sudo chmod +x /usr/local/bin/google-chrome
 
           # Baixar e instalar o ChromeDriver correspondente
           wget https://storage.googleapis.com/chrome-for-testing-public/130.0.6723.58/linux64/chromedriver-linux64.zip
