--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Diario Oficial Automation
 on:
   workflow_dispatch:  # Permitir execução manual
   schedule:
-    # Agendado para rodar às 00:03 UTC (20:03 no UTC-4)
-    - cron: '3 0 * * 0-4'
+    # Agendado para rodar às 22:30 UTC de segunda a sexta (dias 1 a 5 da semana)
+    - cron: '30 22 * * 1-5'
 
 jobs:
   run-script:
