--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pdfplumber yagmail requests selenium
+          pip install -r requirements.txt
 
       - name: Run Python script
         env:
