--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Diario Oficial Automation
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 11 * * 1-5'  # 11:30 UTC = 08:30 São Paulo (UTC-3) = 07:30 Boa Vista (UTC-4)
+    - cron: '30 11 * * 1-5'
 
 jobs:
   run-script:
@@ -12,28 +12,19 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-          python -m pip show requests || true
           python -c "import requests; print('requests OK:', requests.__version__)"
-      
-      - name: Set up Chrome (with matching ChromeDriver)
-        uses: browser-actions/setup-chrome@v2
-        id: setup-chrome
-        with:
-          chrome-version: stable
-          install-chromedriver: true
-          install-dependencies: true
-      
+
       - name: Restore state cache
         uses: actions/cache@v4
         with:
@@ -42,15 +33,11 @@ jobs:
           restore-keys: |
             diario-state-${{ runner.os }}-
 
-      
       - name: Run Python script
         env:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
-          CHROME_BIN: ${{ steps.setup-chrome.outputs.chrome-path }}
-          CHROMEDRIVER_BIN: ${{ steps.setup-chrome.outputs.chromedriver-path }}
           SEND_ONLY_IF_NEW: "true"
           SEND_ONLY_IF_MATCH: "false"
         run: |
           python script_diario_oficial.py
-
